# json-path-analysis

./: Cargo.toml  README.md
src/: indexer.rs  lib.rs  main.rs  parser.rs  path.rs
tests/: 2.txt  3.txt  4.txt  comments.jsonc  object_index.json  unwrap_pretty.txt
