[package]
name = "json-tree"
description="Tools for parsing and indexing JSON files."
version = "0.1.0"
edition = "2021"
authors = ["Sammy99jsp <sammy99jsp@avdanos.com>"]
license = "GPL-3.0"

[features]
jsonc = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
colored = "2.0.0"